manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghas-jira-integration
  namespace: tools
  labels:
    app: ghas-jira-integration
    CostProduct: devops
    CostTech: k8s
    owner: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghas-jira-integration
  template:
    metadata:
      labels:
        app: ghas-jira-integration
        owner: infra
    spec:
      volumes:
      - name: github-app-secret
        secret:
          secretName: ghas-jira-integration
          optional: false
      serviceAccountName: "ghas-jira-integration"
      containers:
        - name: ghas-jira-integration
          image: 963188529772.dkr.ecr.us-west-2.amazonaws.com/ghas2jira:v1
          imagePullPolicy: Always
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 100m
          ports:
            - containerPort: 5000
          volumeMounts:
          - name: github-app-secret
            mountPath: "/code/github_app_secret"
            readOnly: true
