manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    owner: infra
  name: ghas-jira-integration
  namespace: tools
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: ghas-jira-integration
  sessionAffinity: None
  type: ClusterIP
